<resources>
    <string name="app_name">Pandemic</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="first_name">First Name</string>
    <string name="age">Age</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_person">Add Person</string>
    <string name="total">Total</string>
    <string name="active">Active</string>
    <string name="recovered">Rec</string>
    <string name="deaths">Deaths</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
